{
  "version": 4,
  "terraform_version": "0.12.21",
  "serial": 33,
  "lineage": "2f77676e-1172-a406-3bcb-23676d23b71f",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0d3a6e7e9b173d589",
            "domain": "vpc",
            "id": "eipalloc-63c5f456",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0a3b6c963ee1aea51",
            "private_dns": "ip-10-0-25-191.us-west-1.compute.internal",
            "private_ip": "10.0.25.191",
            "public_dns": "ec2-54-177-50-115.us-west-1.compute.amazonaws.com",
            "public_ip": "54.177.50.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-eip",
              "VPC": "vpc-0bd218d923dd2df0d"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:internet-gateway/igw-090245b019eb81975",
            "id": "igw-090245b019eb81975",
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "staging-vpc"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-63c5f456",
            "id": "nat-0deae54b2ead5a46b",
            "network_interface_id": "eni-0a3b6c963ee1aea51",
            "private_ip": "10.0.25.191",
            "public_ip": "54.177.50.115",
            "subnet_id": "subnet-09492a113bee24417",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-nat-gw",
              "VPC": "vpc-0bd218d923dd2df0d"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0fcca2df12be8bd0d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0deae54b2ead5a46b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0fcca2df12be8bd0d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat-gw",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-090245b019eb81975",
            "id": "r-rtb-0c9c1146a5e8f297d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c9c1146a5e8f297d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:route-table/rtb-0fcca2df12be8bd0d",
            "id": "rtb-0fcca2df12be8bd0d",
            "owner_id": "702201460202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0deae54b2ead5a46b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-rt",
              "VPC": "vpc-0bd218d923dd2df0d"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:route-table/rtb-0c9c1146a5e8f297d",
            "id": "rtb-0c9c1146a5e8f297d",
            "owner_id": "702201460202",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-090245b019eb81975",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-rt",
              "VPC": "vpc-0bd218d923dd2df0d"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "private-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018f14bd1c32ae5f8",
            "route_table_id": "rtb-0fcca2df12be8bd0d",
            "subnet_id": "subnet-0e9c930a9590bbb02"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c3ad56c4aff85dc",
            "route_table_id": "rtb-0fcca2df12be8bd0d",
            "subnet_id": "subnet-0d99e6c9b251789e0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018da297562029cf6",
            "route_table_id": "rtb-0fcca2df12be8bd0d",
            "subnet_id": "subnet-094912a7b0355f5f4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "public-2a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0688596b5db113495",
            "route_table_id": "rtb-0c9c1146a5e8f297d",
            "subnet_id": "subnet-09492a113bee24417"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-2b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff320ec70a644dd1",
            "route_table_id": "rtb-0c9c1146a5e8f297d",
            "subnet_id": "subnet-081fd0f7e20699c75"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-2c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eafb222e105b9019",
            "route_table_id": "rtb-0c9c1146a5e8f297d",
            "subnet_id": "subnet-0af339176ba47a685"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "private-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:subnet/subnet-0e9c930a9590bbb02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.64.0/20",
            "id": "subnet-0e9c930a9590bbb02",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-subnet",
              "Subnet": "private-2a-4"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-subnet",
              "Subnet": "private-2a-4"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:subnet/subnet-0d99e6c9b251789e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.80.0/20",
            "id": "subnet-0d99e6c9b251789e0",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-subnet",
              "Subnet": "private-2b-5"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-subnet",
              "Subnet": "private-2b-5"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:subnet/subnet-094912a7b0355f5f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.96.0/20",
            "id": "subnet-094912a7b0355f5f4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-subnet",
              "Subnet": "private-2c-6"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-private-subnet",
              "Subnet": "private-2c-6"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "map",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": "public-2a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:subnet/subnet-09492a113bee24417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.16.0/20",
            "id": "subnet-09492a113bee24417",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-subnet",
              "Subnet": "public-2a-1"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-subnet",
              "Subnet": "public-2a-1"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-2b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:subnet/subnet-081fd0f7e20699c75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.32.0/20",
            "id": "subnet-081fd0f7e20699c75",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-subnet",
              "Subnet": "public-2b-2"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-subnet",
              "Subnet": "public-2b-2"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-2c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:subnet/subnet-0af339176ba47a685",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.48.0/20",
            "id": "subnet-0af339176ba47a685",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-subnet",
              "Subnet": "public-2c-3"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-public-subnet",
              "Subnet": "public-2c-3"
            },
            "vpc_id": "vpc-0bd218d923dd2df0d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:702201460202:vpc/vpc-0bd218d923dd2df0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dce46b33810d6f53",
            "default_route_table_id": "rtb-0b5a38e80be4bb3dc",
            "default_security_group_id": "sg-0c4d15e67ec846ac3",
            "dhcp_options_id": "dopt-12ae6074",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bd218d923dd2df0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b5a38e80be4bb3dc",
            "owner_id": "702201460202",
            "tags": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-vpc"
            },
            "tags_all": {
              "Environment": "staging",
              "ManagedBy": "terraform",
              "Name": "mystaging-staging-vpc"
            }
          }
        }
      ]
    }
  ]
}